fragments/multi-v7: update battery/charger and thermal for acer tegra
Signed-off-by: Stephen Arnold <nerdboy@gentoo.org>

--- a/fragments/multi-v7/chromebooks.cfg
+++ b/fragments/multi-v7/chromebooks.cfg
@@ -33,4 +33,9 @@ CONFIG_KVM_ARM_HOST=y
 CONFIG_VHOST_NET=m
 CONFIG_VHOST=m
 CONFIG_VHOST_CROSS_ENDIAN_LEGACY=y
+CONFIG_TEGRA_SOCTHERM=y
+CONFIG_RTC_DRV_CROS_EC=m
+CONFIG_CHARGER_BQ24735=m
+CONFIG_CHARGER_SBS=m
+CONFIG_MANAGER_SBS=m
 CONFIG_DRM_PANFROST=m
