--- a/fragments/arm64/chromebooks.cfg
+++ b/fragments/arm64/chromebooks.cfg
@@ -12,6 +12,10 @@ CONFIG_TOUCHSCREEN_ATMEL_MXT_T37=y
 CONFIG_TCG_TPM=y
 CONFIG_TCG_TIS_I2C_INFINEON=y
 CONFIG_PM_DEVFREQ=y
+CONFIG_DEVFREQ_GOV_PERFORMANCE=m
+CONFIG_DEVFREQ_GOV_POWERSAVE=m
+CONFIG_DEVFREQ_GOV_USERSPACE=m
+CONFIG_DEVFREQ_GOV_PASSIVE=m
 CONFIG_ARM_RK3399_DMC_DEVFREQ=m
 CONFIG_PM_DEVFREQ_EVENT=y
 CONFIG_DEVFREQ_EVENT_ROCKCHIP_DFI=m
