--- a/fragments/multi-v7/chromebooks.cfg
+++ b/fragments/multi-v7/chromebooks.cfg
@@ -20,7 +20,7 @@ CONFIG_CGROUP_PERF=y
 CONFIG_CGROUP_DEBUG=y
 CONFIG_SOCK_CGROUP_DATA=y
 CONFIG_NAMESPACES=y
-CONFIG_UTS_NS=y
+CONFIG_UTS_NS=n
 CONFIG_IPC_NS=y
 CONFIG_USER_NS=y
 CONFIG_PID_NS=y
@@ -39,3 +39,43 @@ CONFIG_CHARGER_BQ24735=m
 CONFIG_CHARGER_SBS=m
 CONFIG_MANAGER_SBS=m
 CONFIG_DRM_PANFROST=m
+CONFIG_IRQ_MSI_IOMMU=y
+CONFIG_PHY_EXYNOS_PCIE=y
+CONFIG_PHY_EXYNOS5250_SATA=y
+CONFIG_ARM_EXYNOS_BUS_DEVFREQ=m
+CONFIG_PM_DEVFREQ_EVENT=y
+CONFIG_DEVFREQ_GOV_PERFORMANCE=m
+CONFIG_DEVFREQ_GOV_POWERSAVE=m
+CONFIG_DEVFREQ_GOV_USERSPACE=m
+CONFIG_DEVFREQ_GOV_PASSIVE=m
+CONFIG_DEVFREQ_EVENT_EXYNOS_NOCP=m
+CONFIG_DEVFREQ_EVENT_EXYNOS_PPMU=m
+CONFIG_DEVFREQ_EVENT_ROCKCHIP_DFI=m
+CONFIG_HW_RANDOM=m
+CONFIG_HW_RANDOM_TIMERIOMEM=m
+CONFIG_HW_RANDOM_ATMEL=m
+CONFIG_HW_RANDOM_BCM2835=m
+CONFIG_HW_RANDOM_IPROC_RNG200=m
+CONFIG_HW_RANDOM_OMAP=m
+CONFIG_HW_RANDOM_OMAP3_ROM=m
+CONFIG_HW_RANDOM_VIRTIO=m
+CONFIG_HW_RANDOM_IMX_RNGC=m
+CONFIG_HW_RANDOM_HISI=m
+CONFIG_HW_RANDOM_ST=m
+CONFIG_HW_RANDOM_STM32=m
+CONFIG_HW_RANDOM_MESON=m
+CONFIG_HW_RANDOM_MTK=m
+CONFIG_HW_RANDOM_EXYNOS=m
+CONFIG_MFD_EXYNOS_LPASS=m
+CONFIG_DRM_EXYNOS_G2D=y
+CONFIG_DRM_EXYNOS_IPP=y
+CONFIG_DRM_EXYNOS_FIMC=y
+CONFIG_DRM_EXYNOS_ROTATOR=y
+CONFIG_DRM_EXYNOS_SCALER=y
+CONFIG_IOMMU_IO_PGTABLE_ARMV7S=y
+CONFIG_IOMMU_DMA=y
+CONFIG_EXYNOS_IOMMU=y
+CONFIG_MTK_IOMMU=y
+CONFIG_MTK_IOMMU_V1=y
+CONFIG_MTK_SMI=y
+CONFIG_CRYPTO_DEV_MEDIATEK=m
