exynos5250 snow: update scripts/fragments and readme
* fixes for snow display (also set xorg mode the same)
* kernel hardening and other config updates
* add single-dtb test image for snow
* update config/readme for alt rootfs and config options

Signed-off-by: Stephen Arnold <nerdboy@gentoo.org>

--- a/fragments/multi-v7/lpae.cfg
+++ b/fragments/multi-v7/lpae.cfg
@@ -1,5 +1,7 @@
 CONFIG_ARM_LPAE=y
 CONFIG_IOMMU_IO_PGTABLE_LPAE=y
+# CONFIG_KERNEL_GZIP is not set
+CONFIG_KERNEL_XZ=y
 CONFIG_CGROUPS=y
 CONFIG_PAGE_COUNTER=y
 CONFIG_MEMCG=y
@@ -29,15 +31,10 @@ CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_RELAY=y
-CONFIG_VIRTUALIZATION=y
-CONFIG_KVM=y
-CONFIG_KVM_ARM_HOST=y
-CONFIG_VHOST_NET=m
-CONFIG_VHOST=m
-CONFIG_VHOST_CROSS_ENDIAN_LEGACY=y
-CONFIG_TEGRA_SOCTHERM=y
-CONFIG_RTC_DRV_CROS_EC=m
-CONFIG_CHARGER_BQ24735=m
-CONFIG_CHARGER_SBS=m
-CONFIG_MANAGER_SBS=m
-CONFIG_DRM_PANFROST=m
+CONFIG_ZBUD=y
+CONFIG_ZPOOL=y
+CONFIG_ZSMALLOC=m
+CONFIG_ZRAM=m
+# CONFIG_ZRAM_MEMORY_TRACKING is not set
+CONFIG_ZRAM_WRITEBACK=y
+
