--- a/fragments/multi-v7/chromebooks.cfg
+++ b/fragments/multi-v7/chromebooks.cfg
@@ -1,3 +1,16 @@
+# CONFIG_KERNEL_GZIP is not set
+CONFIG_KERNEL_XZ=y
+CONFIG_HZ=300
+CONFIG_HZ_300=y
+CONFIG_IKCONFIG=m
+CONFIG_PREEMPT=y
+CONFIG_DEBUG_PREEMPT=y
+CONFIG_IKCONFIG_PROC=y
+CONFIG_PREEMPTION=y
+CONFIG_PREEMPT_COUNT=y
+CONFIG_PREEMPT_RCU=y
+CONFIG_TASKS_RCU=y
+CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_CGROUPS=y
 CONFIG_PAGE_COUNTER=y
 CONFIG_MEMCG=y
@@ -27,12 +40,9 @@ CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_RELAY=y
+# CONFIG_ARM_APPENDED_DTB is not set
+CONFIG_DEPRECATED_PARAM_STRUCT=y
 CONFIG_VIRTUALIZATION=y
-CONFIG_KVM=y
-CONFIG_KVM_ARM_HOST=y
-CONFIG_VHOST_NET=m
-CONFIG_VHOST=m
-CONFIG_VHOST_CROSS_ENDIAN_LEGACY=y
 CONFIG_TEGRA_SOCTHERM=y
 CONFIG_RTC_DRV_CROS_EC=m
 CONFIG_CHARGER_BQ24735=m
@@ -79,3 +89,46 @@ CONFIG_MTK_IOMMU=y
 CONFIG_MTK_IOMMU_V1=y
 CONFIG_MTK_SMI=y
 CONFIG_CRYPTO_DEV_MEDIATEK=m
+CONFIG_ZBOOT_ROM_TEXT=0x0
+CONFIG_DRM_ANALOGIX_ANX78XX=y
+CONFIG_DRM_PARADE_PS8622=y
+CONFIG_DRM_TEGRA_STAGING=y
+CONFIG_DRM_VGEM=m
+CONFIG_DRM_CDNS_DSI=m
+CONFIG_DRM_LVDS_ENCODER=m
+CONFIG_DRM_NXP_PTN3460=m
+CONFIG_DRM_PANEL_ARM_VERSATILE=m
+CONFIG_DRM_PANEL_FEIYANG_FY07024DI26A30D=m
+CONFIG_DRM_PANEL_LVDS=m
+CONFIG_DRM_PANEL_SAMSUNG_S6D16D0=m
+CONFIG_DRM_PANEL_SAMSUNG_S6E3HA2=m
+CONFIG_BACKLIGHT_TPS65217=m
+CONFIG_DRM_PANEL_SAMSUNG_S6E63M0=m
+CONFIG_FB_MODE_HELPERS=y
+CONFIG_FB_SIMPLE=y
+CONFIG_FRAMEBUFFER_CONSOLE_DEFERRED_TAKEOVER=y
+CONFIG_LCD_LMS283GF05=m
+CONFIG_LCD_LTV350QV=m
+# CONFIG_FB_MX3 is not set
+# CONFIG_FB_SH_MOBILE_LCDC is not set
+# CONFIG_FB_WM8505 is not set
+CONFIG_FIRMWARE_EDID=y
+CONFIG_LOGO=y
+CONFIG_LOGO_LINUX_CLUT224=y
+CONFIG_LOGO_LINUX_MONO=y
+CONFIG_LOGO_LINUX_VGA16=y
+CONFIG_I2C_ARB_GPIO_CHALLENGE=y
+CONFIG_I2C_MT65XX=y
+CONFIG_I2C_MUX_GPIO=y
+CONFIG_I2C_MUX_GPMUX=y
+CONFIG_I2C_MUX_REG=y
+CONFIG_MULTIPLEXER=y
+CONFIG_CROS_EC_I2C=y
+# CONFIG_CROS_EC_LIGHTBAR is not set
+CONFIG_CROS_EC_RPMSG=m
+CONFIG_KEYBOARD_CROS_EC=y
+CONFIG_MFD_CROS_EC=y
+CONFIG_MFD_CROS_EC_CHARDEV=y
+CONFIG_REGULATOR_USERSPACE_CONSUMER=y
+CONFIG_REGULATOR_VIRTUAL_CONSUMER=y
+CONFIG_VIRT_DRIVERS=y
