--- a/fragments/multi-v7/power.cfg
+++ b/fragments/multi-v7/power.cfg
@@ -1,5 +1,6 @@
 CONFIG_IKCONFIG=m
 CONFIG_IKCONFIG_PROC=y
+CONFIG_POWER_RESET_RESTART=y
 CONFIG_BATTERY_SBS=m
 CONFIG_CHARGER_BQ24735=m
 CONFIG_CHARGER_MANAGER=y
@@ -7,3 +8,20 @@ CONFIG_CHARGER_SBS=m
 CONFIG_GENERIC_ADC_BATTERY=m
 CONFIG_MANAGER_SBS=m
 CONFIG_I2C_SMBUS=m
+CONFIG_CLK_RENESAS_LEGACY=y
+CONFIG_CLOCK_THERMAL=y
+CONFIG_COMMON_CLK_FIXED_MMIO=y
+CONFIG_COMMON_CLK_PWM=m
+CONFIG_COMMON_CLK_SCPI=m
+CONFIG_DEVFREQ_THERMAL=y
+CONFIG_GENERIC_ADC_THERMAL=m
+CONFIG_TEGRA_SOCTHERM=m
+CONFIG_THERMAL_EMULATION=y
+CONFIG_THERMAL_GOV_BANG_BANG=y
+CONFIG_THERMAL_GOV_FAIR_SHARE=y
+CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
+CONFIG_THERMAL_GOV_USER_SPACE=y
+CONFIG_THERMAL_MMIO=m
+CONFIG_THERMAL_WRITABLE_TRIPS=y
+# CONFIG_ARM_SCPI_CPUFREQ is not set
+CONFIG_CLK_RCAR_GEN2=y
