remove sudo from signing cmds, cleanup fs attrs cfg and readme
Signed-off-by: Stephen Arnold <nerdboy@gentoo.org>

--- a/fragments/multi-v7/drm.cfg
+++ b/fragments/multi-v7/drm.cfg
@@ -3,9 +3,11 @@ CONFIG_MFD_MAX77693=y
 CONFIG_REGULATOR_USERSPACE_CONSUMER=m
 CONFIG_REGULATOR_VCTRL=y
 CONFIG_REGULATOR_VIRTUAL_CONSUMER=m
+CONFIG_DRM_LOAD_EDID_FIRMWARE=y
+CONFIG_DRM_MALI_DISPLAY=m
 CONFIG_DRM_ANALOGIX_ANX78XX=y
-CONFIG_DRM_ANALOGIX_DP=y
-CONFIG_DRM_EXYNOS=y
+CONFIG_DRM_ANALOGIX_DP=m
+CONFIG_DRM_EXYNOS=m
 CONFIG_DRM_EXYNOS_FIMC=y
 CONFIG_DRM_EXYNOS_G2D=y
 CONFIG_DRM_EXYNOS_ROTATOR=y
