--- a/fragments/multi-v7/security.cfg
+++ b/fragments/multi-v7/security.cfg
@@ -46,6 +46,15 @@ CONFIG_FANOTIFY=y
 CONFIG_FIRMWARE_MEMMAP=y
 CONFIG_FORTIFY_SOURCE=y
 CONFIG_FRONTSWAP=y
+CONFIG_EXT4_FS_POSIX_ACL=y
+CONFIG_EXT4_FS_SECURITY=y
+CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
+CONFIG_HUGETLBFS=y
+CONFIG_CGROUP_BPF=y
+CONFIG_CGROUP_HUGETLB=y
+# CONFIG_BPF_STREAM_PARSER is not set
+CONFIG_SOCK_CGROUP_DATA=y
+CONFIG_HUGETLB_PAGE=y
 CONFIG_FSCACHE=m
 CONFIG_FS_ENCRYPTION=y
 CONFIG_FUSE_FS=m
@@ -109,7 +118,6 @@ CONFIG_CACHEFILES=m
 CONFIG_CUSE=m
 # CONFIG_DLM_DEBUG is not set
 # CONFIG_EVM is not set
-# CONFIG_FANOTIFY_ACCESS_PERMISSIONS is not set
 # CONFIG_FSCACHE_DEBUG is not set
 # CONFIG_FSCACHE_HISTOGRAM is not set
 # CONFIG_FSCACHE_OBJECT_LIST is not set
@@ -119,7 +127,6 @@ CONFIG_GCC_PLUGIN_STRUCTLEAK=y
 # CONFIG_GCC_PLUGIN_STRUCTLEAK_VERBOSE is not set
 CONFIG_HARDENED_USERCOPY_FALLBACK=y
 # CONFIG_HARDENED_USERCOPY_PAGESPAN is not set
-CONFIG_HUGETLB_PAGE=y
 # CONFIG_IMA is not set
 CONFIG_INET_SCTP_DIAG=m
 # CONFIG_INPUT_APMPOWER is not set
