--- a/fragments/multi-v7/power.cfg
+++ b/fragments/multi-v7/power.cfg
@@ -23,5 +23,39 @@ CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
 CONFIG_THERMAL_MMIO=m
 CONFIG_THERMAL_WRITABLE_TRIPS=y
-# CONFIG_ARM_SCPI_CPUFREQ is not set
 CONFIG_CLK_RCAR_GEN2=y
+CONFIG_ARM_BRCMSTB_AVS_CPUFREQ=m
+CONFIG_ARM_EXYNOS_BUS_DEVFREQ=m
+# CONFIG_ARM_IMX6Q_CPUFREQ is not set
+CONFIG_ARM_MEDIATEK_CPUFREQ=m
+CONFIG_ARM_SCPI_CPUFREQ=m
+CONFIG_ARM_TEGRA20_CPUFREQ=m
+CONFIG_CPUFREQ_DT=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=m
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=m
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_IDLE_GOV_TEO=y
+CONFIG_DEVFREQ_GOV_PASSIVE=m
+CONFIG_DEVFREQ_GOV_PERFORMANCE=m
+CONFIG_DEVFREQ_GOV_POWERSAVE=m
+CONFIG_DEVFREQ_GOV_USERSPACE=m
+CONFIG_PM_DEVFREQ_EVENT=y
+CONFIG_QORIQ_CPUFREQ=m
+# CONFIG_THERMAL_DEFAULT_GOV_STEP_WISE is not set
+CONFIG_THERMAL_DEFAULT_GOV_USER_SPACE=y
+# CONFIG_DEVFREQ_EVENT_EXYNOS_NOCP is not set
+CONFIG_DEVFREQ_EVENT_EXYNOS_PPMU=m
+CONFIG_DEVFREQ_EVENT_ROCKCHIP_DFI=m
+CONFIG_APM_POWER=m
+CONFIG_ARM_BIG_LITTLE_CPUFREQ=m
+CONFIG_ARM_SCMI_PROTOCOL=y
+CONFIG_CONNECTOR=y
+CONFIG_ARM_SCMI_CPUFREQ=m
+CONFIG_ARM_SCMI_POWER_DOMAIN=m
+# CONFIG_ARM_VEXPRESS_SPC_CPUFREQ is not set
+CONFIG_PROC_EVENTS=y
+CONFIG_COMMON_CLK_SCMI=m
+CONFIG_SENSORS_ARM_SCMI=m
+CONFIG_SENSORS_ARM_SCPI=m
+
