revert to "standard" config, add DM modules
Signed-off-by: Stephen Arnold <nerdboy@gentoo.org>

--- a/fragments/arm64/chromebooks.cfg
+++ b/fragments/arm64/chromebooks.cfg
@@ -1,3 +1,9 @@
+CONFIG_DM_CRYPT=y
+CONFIG_DM_FLAKEY=m
+CONFIG_DM_PERSISTENT_DATA=y
+CONFIG_DM_THIN_PROVISIONING=y
+CONFIG_DM_VERITY=y
+CONFIG_DM_VERITY_CHROMEOS=y
 CONFIG_SND_HDA_PREALLOC_SIZE=2048
 CONFIG_SND_SOC_ROCKCHIP=m
 CONFIG_SND_SOC_ROCKCHIP_I2S=m
