--- a/fragments/multi-v7/security.cfg
+++ b/fragments/multi-v7/security.cfg
@@ -1,4 +1,10 @@
 CONFIG_APM_EMULATION=m
+CONFIG_DM_CRYPT=y
+CONFIG_DM_FLAKEY=m
+CONFIG_DM_PERSISTENT_DATA=y
+CONFIG_DM_THIN_PROVISIONING=y
+CONFIG_DM_VERITY=y
+CONFIG_DM_VERITY_CHROMEOS=y
 CONFIG_ARM_SCPI_PROTOCOL=m
 CONFIG_AUDIT=y
 CONFIG_BIG_KEYS=y
