--- a/fragments/multi-v7/networking.cfg
+++ b/fragments/multi-v7/networking.cfg
@@ -64,7 +64,7 @@ CONFIG_DEFAULT_PFIFO_FAST=y
 # CONFIG_DEFAULT_SFQ is not set
 # CONFIG_DP83640_PHY is not set
 CONFIG_GACT_PROB=y
-# CONFIG_IFB is not set
+CONFIG_IFB=m
 CONFIG_INET_ESP_OFFLOAD=m
 CONFIG_INET_XFRM_TUNNEL=m
 CONFIG_IP6_NF_FILTER=m
@@ -284,7 +284,7 @@ CONFIG_NET_SCH_GRED=m
 CONFIG_NET_SCH_HFSC=m
 CONFIG_NET_SCH_HHF=m
 CONFIG_NET_SCH_HTB=m
-# CONFIG_NET_SCH_INGRESS is not set
+CONFIG_NET_SCH_INGRESS=m
 CONFIG_NET_SCH_MQPRIO=m
 CONFIG_NET_SCH_MULTIQ=m
 CONFIG_NET_SCH_NETEM=m
