--- a/fragments/multi-v7/chromebooks.cfg
+++ b/fragments/multi-v7/chromebooks.cfg
@@ -35,12 +35,25 @@ CONFIG_SOCK_CGROUP_DATA=y
 CONFIG_NAMESPACES=y
 CONFIG_UTS_NS=n
 CONFIG_IPC_NS=y
-CONFIG_USER_NS=y
+# CONFIG_USER_NS is not set
 CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_RELAY=y
-# CONFIG_ARM_APPENDED_DTB is not set
+CONFIG_ARM_APPENDED_DTB=y
+# CONFIG_BACKLIGHT_TPS65217 is not set
+CONFIG_CROS_EC_I2C=m
+CONFIG_CROS_EC_LIGHTBAR=y
+CONFIG_I2C_CROS_EC_TUNNEL=m
+CONFIG_CROS_EC_SPI=m
+CONFIG_CROS_EC_PROTO=y
+CONFIG_CROS_EC_CHARDEV=y
+CONFIG_CROS_EC_DEBUGFS=y
+CONFIG_CROS_EC_SYSFS=y
+CONFIG_IIO_CROS_EC_SENSORS_CORE=m
+CONFIG_IIO_CROS_EC_SENSORS=m
+# CONFIG_IIO_CROS_EC_SENSORS_LID_ANGLE is not set
+CONFIG_IIO_CROS_EC_LIGHT_PROX=m
 CONFIG_DEPRECATED_PARAM_STRUCT=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_TEGRA_SOCTHERM=y
