cleanup cloud-init meta-data
Signed-off-by: Stephen L Arnold <sarnold@vctlabs.com>

--- a/tools/cloud/99-data.cfg
+++ b/tools/cloud/99-data.cfg
@@ -2,8 +2,8 @@ datasource_list: [ NoCloud ]
 datasource:
   NoCloud:
     meta-data:
-      instance-id: literallyanything
-      local-hostname: myhostname
+      instance-id: chromebook-test
+      local-hostname: arm
     user-data: |
       #cloud-config
       users:
