split cloud-init config into ethernet/no-ethernet, add readme note
Signed-off-by: Stephen L Arnold <sarnold@vctlabs.com>

--- a/tools/cloud/99-data-eth.cfg
+++ b/tools/cloud/99-data-eth.cfg
@@ -2,7 +2,7 @@ datasource_list: [ NoCloud ]
 datasource:
   NoCloud:
     meta-data:
-      instance-id: chromebook-nonet
+      instance-id: chromebook-test
       local-hostname: arm
 
     user-data: |
@@ -14,10 +14,17 @@ datasource:
           home: /home/ubuntu
           shell: /bin/bash
           lock_passwd: false
-      # normal auth via ssh after config (with console access)
-      ssh_pwauth: true
+          ssh-authorized-keys:
+            - <sshPUBKEY>
+      # only cert auth via ssh (console access can still login)
+      ssh_pwauth: false
       disable_root: false
       chpasswd:
         list: |
            ubuntu:temppwd
         expire: True
+
+      package_update: true
+      packages:
+        - screen
+        - gkrellmd
