chg: user: update readme and dwc3 host config, add sys-mod snippets
* includes regen ssh keys, suspend inhibit, console blank

Signed-off-by: Stephen L Arnold <sarnold@vctlabs.com>

--- a/fragments/arm64/chromebooks.cfg
+++ b/fragments/arm64/chromebooks.cfg
@@ -31,6 +31,11 @@ CONFIG_PHY_ROCKCHIP_USB=y
 CONFIG_BATTERY_SBS=m
 CONFIG_REGULATOR_VCTRL=m
 CONFIG_MEDIA_USB_SUPPORT=y
+CONFIG_USB_DWC3=y
+CONFIG_USB_DWC3_HOST=y
+CONFIG_USB_DWC3_OF_SIMPLE=y
+CONFIG_USB_DWC3_PCI=y
+CONFIG_USB_DWC3_ROCKCHIP=y
 CONFIG_USB_VIDEO_CLASS=m
 CONFIG_DRM_PANFROST=m
 CONFIG_INPUT_UINPUT=m
